# full-stack-todo

./: README.md
client/: .eslintrc.js  .gitignore  apollo.config.js  package-lock.json  package.json
client/src/: App.css  App.tsx  index.tsx
client/src/components/AddButton/: AddButton.tsx
client/src/components/App/: App.tsx
client/src/components/List/: List.tsx
client/src/components/ToDoItem/: ToDoItem.tsx
client/src/components/ToDoList/: ToDoList.tsx
client/src/graphql/mutations/: UpdateToDo.ts  addToDo.ts  index.ts
client/src/graphql/mutations/types/: AddToDo.ts
client/src/graphql/queries/: AllToDos.ts  index.ts
client/src/graphql/queries/types/: AllToDos.ts
client/src/hooks/: index.ts  useMutationAddToDo.ts  useMutationUpdateToDo.ts  useQueryAllToDos.ts
client/src/types/: ToDos.ts  UpdateToDo.ts
server/: .env  .gitignore  Cargo.toml  todos.db
server/migrations/2020-07-25-003804_create_to_dos/: up.sql
server/migrations/2020-07-25-003804_create_todo/: up.sql
server/migrations/2020-07-25-223518_create_to_dos/: down.sql  up.sql
server/src/: database.rs  diesel_schema.rs  graphql_schema.rs  main.rs  models.rs  routes.rs  schema.rs
server/src/database/: actions.rs  mod.rs  pool.rs  schema.rs
server/src/graphql/: context.rs  mod.rs  schema.rs
